# ottrip

./: Client.md  Google_OAuth_Setup.md  README.md  app.json  package.json  pnpm-lock.yaml  pyrightconfig.json  전체기획.md  진행.md
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  ruff.toml
server/app/: api.py  config.py  main.py  schemas.py
server/app/accomodation/: models.py  repository.py  router.py  schemas.py  service.py
server/app/ai/: config.py  service.py
server/app/auth/: __init__.py  config.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py  token.py
server/app/common/: config.py  deps.py  schemas.py
server/app/core/: config.py  exceptions.py  logging.py  router.py
server/app/database/: config.py  deps.py  engine.py  utils.py
server/app/dev/: router.py
server/app/expenses/: models.py  repository.py  router.py  schemas.py  service.py
server/app/flights/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
server/app/itinerary/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
server/app/plans/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
server/app/users/: models.py  repository.py  router.py  schemas.py  service.py
server/app/utils/: dependency.py  email.py
server/migrations/: env.py
server/migrations/versions/: 2025-07-19_db_base.py  2025-07-21_itinerary_date.py  2025-07-21_itinerary_model_fix.py  (+6 more)
(+59 files in other folders)
